gcc/testsuite/g++.dg/parse/error22.C
// { dg-options "-fshow-column -ansi -pedantic-errors -Wno-long-long" }
// PR c++/15786

struct A {
  void foo(bar* p); /* { dg-error "12:'bar' has not been declared" } */
};
